--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <div id="sidebar">
       <div id="logo">
         <%= link_to root_path do %>
-          <%= image_tag "download (2).jpeg", class: "logo_image" %>
+          <div align="center"><%= image_tag "download (2).jpeg", class: "logo_image" %></div>
         <% end %>
       </div>
 
