--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
   <p class="body"><%= @post.body %></p>
 
   <!-- <div id="comments">
-    <h2><%= @post.comments.count %> Comments</h2>
+    <h2><%#= @post.comments.count %> Comments</h2>
     <%#= render @post.comments %>
 
     <h3>Add a comment:</h3>
