--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <ul>
         <li class="category">Website</li>
         <li><%= link_to "Blog", root_path %></li>
-        <li><%#= link_to "About", about_path %></li>
+        <li><%= link_to "About", about_path %></li>
       </ul>
 
       <ul>
@@ -33,27 +33,27 @@
         <li><a href="mailto:hey@mackenziechild.me">Email</a></li>
       </ul>
 
-      <%# if !user_signed_in? %>
-        <!-- <p class="sign_in"><%#= link_to "Admin Login", new_user_session_path %></p> -->
-      <%# end %>
+      <% if !user_signed_in? %>
+        <p class="sign_in"><%= link_to "Admin Login", new_user_session_path %></p>
+      <%end %>
     </div>
 
     <div id="main_content">
       <div id="header">
-        <%# if current_page?(root_path) %>
+        <% if current_page?(root_path) %>
           <p>All Posts</p>
-        <%# elsif current_page?(about_path) %>
+        <% elsif current_page?(about_path) %>
           <p>About</p>
-        <%# else %>
+        <% else %>
           <%= link_to "Back to All Posts", root_path %>
-        <%# end %>
+        <% end %>
 
-        <%# if user_signed_in? %>
+        <% if user_signed_in? %>
           <div class="buttons">
             <button class="button"><%= link_to "New Post", new_post_path %></button>
             <button class="button">Log Out</button>
           </div>
-        <%# end %>
+        <% end %>
       </div>
 
       <% flash.each do |name, msg| %>
